Created hero.css and uploaded fonts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Kazuto "Kirito" Kirigaya</title>
         <link rel="icon" href="img/kirito-avatar.jpg">
+        <link rel="stylesheet" type="text/css" href="css/hero.css">
     </head>
     <body>
         <!-- header element -->
