Wrote the css for our character's website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Kazuto "Kirito" Kirigaya</title>
         <link rel="icon" href="img/kirito-avatar.jpg">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/hero.css">
     </head>
     <body>
@@ -21,7 +24,7 @@
                 of people in these games, often saving the real world lives of these players.
             </p>
             <img src="img/kirito-big.jpg">
-            <p> Kazuto and his friends</p>
+            <p class="caption"> Kazuto and his friends</p>
 
             <!-- characteristics -->
             <h2>Kazuto's Characteristics</h2>
