Remove a in Kirigaya

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kazuto "Kirito" Kirigaya</title>
+        <title>Kazuto "Kirito" Kirigay</title>
         <link rel="icon" href="img/kirito-avatar.jpg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
