--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>
                 Kazuto is a bad-ass swordsman! He is a high school student who enjoys playing FullDive VR games such as Sword Art Online (SAO),
                 ALfheim Online(ALO), Gun Gale Online(GGO), Ordinal Scale and Project Alicization. He often ends up being a hero to a multitude 
-                of people in these games, often saving the real world lives of these players.<br>
+                of people in these games, often saving the real world lives of these players.
             </p>
             <img src="img/kirito-big.jpg">
             <p class="caption"> Kazuto and his friends</p>
